--- a/test.html
+++ b/test.html
@@ -71,7 +71,10 @@
 		});
 		Instascan.Camera.getCameras().then(function (cameras) {
 		  self.cameras = cameras;
-		  if (cameras.length > 0) {
+		  if (cameras.length > 1) {
+			self.activeCameraId = cameras[1].id;
+			self.scanner.start(cameras[1]);
+		  } else if (cameras.length > 0) {
 			self.activeCameraId = cameras[0].id;
 			self.scanner.start(cameras[0]);
 		  } else {
