--- a/test.html
+++ b/test.html
@@ -41,7 +41,7 @@
         </section>
       </div>
       <div class="preview-container">
-        <video id="preview"></video>
+        <video id="preview" style="width:100%"></video>
       </div>
     </div>
     <script>
