--- a/index.html
+++ b/index.html
@@ -1,7 +1,26 @@
-<form name="frm" action="test.html">
-<select name="m">
-	<option>Materia 1</option>
-	<option>Materia 2</option>
-</select>
-<input type="submit" value="Continuar">
-</form>
+<html>
+<head>
+<title>Instascan &ndash; Demo</title>
+<link rel="icon" type="image/png" href="favicon.png">
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<div id="app">
+    
+	<div class="preview-container">
+	
+		<form name="frm" action="test.html">
+		<select name="m">
+			<option>Materia 1</option>
+			<option>Materia 2</option>
+		</select>
+		<input type="submit" value="Continuar">
+		</form>
+	
+	</div>
+
+</div>
+	
+</body>
+</html>
