--- a/test.html
+++ b/test.html
@@ -18,10 +18,16 @@
     <a href="https://github.com/schmich/instascan" style="display:none"><img style="position: absolute; top: 0; right: 0; border: 0; z-index: 1" src="https://camo.githubusercontent.com/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"></a>
     <div id="app">
       <div class="sidebar">
+		<section class="cameras">
+          <h2>Carrera - Materia - Turno</h2>
+		  <ul>
+			<li id="datos"></li>
+		  </ul>
+        </section>
         <section class="cameras">
           <h2>Camaras</h2>
           <ul>
-            <li v-if="cameras.length === 0" class="empty">No se encontraron cámaras</li>
+            <li v-if="cameras.length === 0" class="empty">Buscando c&aacute;maras...</li>
             <li v-for="camera in cameras">
               <span v-if="camera.id == activeCameraId" :title="formatName(camera.name)" class="active">{{ formatName(camera.name) }}</span>
               <span v-if="camera.id != activeCameraId" :title="formatName(camera.name)">
@@ -98,5 +104,41 @@
 	});
 	document.getElementById('preview').style += '; width:100%;';
 	</script>
+	
+	<script>
+	var getUrlParameter = function getUrlParameter(sParam) {
+		var sPageURL = decodeURIComponent(window.location.search.substring(1)),
+			sURLVariables = sPageURL.split('&'),
+			sParameterName,
+			i;
+
+		for (i = 0; i < sURLVariables.length; i++) {
+			sParameterName = sURLVariables[i].split('=');
+
+			if (sParameterName[0] === sParam) {
+				return sParameterName[1] === undefined ? true : sParameterName[1];
+			}
+		}
+	};
+
+	var m = getUrlParameter('m');
+	m = m.replace('+', ' ');
+	m = m.replace('+', ' ');
+	m = m.replace('+', ' ');
+	m = m.replace('+', ' ');
+	m = m.replace('+', ' ');
+	m = m.replace('+', ' ');
+	m = m.replace('+', ' ');
+	m = m.replace('+', ' ');
+	m = m.replace('-', '<br>');
+	m = m.replace('-', '<br>');
+	m = m.replace('-', '<br>');
+	m = m.replace('-', '<br>');
+	m = m.replace('-', '<br>');
+	m = m.replace('-', '<br>');
+	m = m.replace('-', '<br>');
+	document.getElementById('datos').innerHTML = m;
+	</script>
+
   </body>
 </html>
