--- a/test.html
+++ b/test.html
@@ -19,7 +19,7 @@
     <div id="app">
       <div class="sidebar">
 		<section class="cameras">
-          <h2>Carrera - Materia - Turno</h2>
+          <h2>Datos</h2>
 		  <ul>
 			<li id="datos"></li>
 		  </ul>
@@ -137,7 +137,7 @@
 	m = m.replace('-', '<br>');
 	m = m.replace('-', '<br>');
 	m = m.replace('-', '<br>');
-	document.getElementById('datos').innerHTML = m;
+	document.getElementById('datos').innerHTML = '06/04/2018<br>'+m;
 	</script>
 
   </body>
