--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 	<div class="preview-container">
 	
 		<form name="frm" action="test.html">
-		<select name="m">
+		<select name="m" style="font-size:25px">
 			<option>Carrera 1 - Materia 1 - Turno 1</option>
 			<option>Carrera 1 - Materia 2 - Turno 1</option>
-		</select>
-		<input type="submit" value="Continuar">
+		</select> &nbsp; 
+		<input type="submit" value="Continuar"  style="font-size:25px">
 		</form>
 	
 	</div>
