--- a/qr.html
+++ b/qr.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <META HTTP-EQUIV="Access-Control-Allow-Origin" CONTENT="http://itssalud.edu.ar">
     <title>Instascan &ndash; Demo</title>
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="style.css">
