--- a/qr.html
+++ b/qr.html
@@ -106,7 +106,7 @@
 	  }).then(function(data) {
 		alert(data);
 	  });
-	parent.setAsistencia(1111);
+	//parent.setAsistencia(1111);
 	</script>
 
   </body>
